...
    }
    
    var availableView: some View {
        
        ScrollView {
            if voucherVM.availableVochers.isEmpty {
                EmptyStateView(title: "You have no Available Vouchers")
            }
            LazyVGrid(columns: columns, spacing: 15) {
                ForEach(voucherVM.availableVochers) { voucher in
                    VoucherCardView(voucher: voucher)
                }
            }
...
    }
    
    var expiredView: some View {
        
        ScrollView {
            if voucherVM.availableVochers.isEmpty {
                EmptyStateView(title: "You have no Expired Vouchers")
            }
            LazyVGrid(columns: columns, spacing: 15) {
                ForEach(voucherVM.expiredVochers) { voucher in
                    VoucherCardView(voucher: voucher)
                }
            }
...
